--- a/uber_button.html
+++ b/uber_button.html
@@ -1,15 +1,21 @@
 <style>
-    .uber-button{
+    .request-button{
         background-color:black;
         color:white;
         border:none;
-        height:40px;
-        width:110px;
+        padding-left: 15px;
+        padding-right:15px ;
+        padding-top:12px ;
+        padding-bottom:12px ;
         cursor:pointer;
+        transition:opacity 0.15s;
 
+    }
+    .request-button:hover{
+        opacity:0.8;
     }
 </style>
 
-<button class="uber-button">
+<button class="request-button">
     Request now
 </button>
