--- a/amazon_button.html
+++ b/amazon_button.html
@@ -4,9 +4,15 @@
         color:black;
         border:none;
         border-radius:18px;
-        height:36px;
-        width:136px;
+        padding-left:35px ;
+        padding-right:35px;
+        padding-bottom:7px;
+        padding-top:7px;
+        border-color: rgb(255, 216, 20);
         cursor:pointer;
+    }
+    .amazon-button:hover{
+        background-color:rgb(245,205,3);
     }
 </style>
 
