added hover on sign up button

--- a/github_button.html
+++ b/github_button.html
@@ -1,15 +1,24 @@
+<button class="github-button">
+    Sign up
+</button>
 <style>
     .github-button{
         background-color:rgb(46, 164, 79);
         color:white;
         border:none;
         border-radius:2px;
-        height:36px;
-        width:90px;
+        padding-right:17px;
+        padding-left:17px;
+        padding-top:12px;
+        padding-bottom:12px;
         font-size:15px;
         font-weight:bold;
         cursor:pointer;
-
+        transition:box-shadow 0.15s;
+       
+    }
+    .github-button:hover{
+        box-shadow: 5px 5px 5px rgba(0,0,0,0.15);
     }
 </style>
 
