--- a/bootstrap_button.html
+++ b/bootstrap_button.html
@@ -3,8 +3,10 @@
         background-color:rgb(121, 82, 179);
         color:white;
         font-size:15px;
-        height:40px;
-        width:110px;
+        padding-left:20px ;
+        padding-right:20px;
+        padding-top:12px ;
+        padding-bottom:12px;
         border:none;
         border-radius:2px;
         cursor:pointer;
@@ -22,16 +24,17 @@
         background-color:white;
         color:rgb(108,117,125);
         border-color: rgb(108,117,125);
-        border-radius:4px;
-        border-width:1px;
+        border-radius:2px;
+        border-width:2px;
         font-size:15px;
         border-style: solid;
-        height:40px;
-        width:110px;
+        padding-left:17px ;
+        padding-right:17px;
+        padding-top:12px ;
+        padding-bottom:12px;
         cursor:pointer;
         font-weight:bold;
     }
-
 </style>
 <button class="download-button">
     Download
