added hover on bookstrap button and download button

--- a/bootstrap_button.html
+++ b/bootstrap_button.html
@@ -13,6 +13,9 @@
         font-weight:bold;
         margin-right: 6px;
     }
+    .bookstrap-button:hover{
+        background-color:rgb(99, 60, 156);
+    }
 </style>
 
 <button class="bookstrap-button">
@@ -34,6 +37,12 @@
         padding-bottom:12px;
         cursor:pointer;
         font-weight:bold;
+        transition:background-color 0.15s,
+        color 0.15s;
+    }
+    .download-button:hover{
+        background-color:rgb(108,117,125);
+        color:white;
     }
 </style>
 <button class="download-button">
