--- a/linkedln_button.html
+++ b/linkedln_button.html
@@ -3,8 +3,10 @@
         background-color:rgb(10,102,194);
         color:white;
         font-size:16px;
-        height:40px;
-        width:280px;
+        padding-left:24px ;
+        padding-right:24px;
+        padding-top:12px ;
+        padding-bottom:12px;
         border:none;
         border-style: solid;
         border-radius:24px;
