added padding to save button

--- a/linkedln_button.html
+++ b/linkedln_button.html
@@ -24,8 +24,10 @@
     .Save-button{
         background-color:white;
         color:rgb(10,102,194);
-        height:40px;
-        width:95px;
+        padding-left:24px ;
+        padding-right:24px;
+        padding-top:12px ;
+        padding-bottom:12px;
         border-radius:18px;
         font-weight:bold;
         cursor:pointer;
