--- a/linkedln_button.html
+++ b/linkedln_button.html
@@ -1,43 +1,48 @@
 <style>
-    .linkedln-button{
-        background-color:rgb(10,102,194);
-        color:white;
-        font-size:16px;
-        padding-left:24px ;
-        padding-right:24px;
-        padding-top:12px ;
-        padding-bottom:12px;
-        border:none;
-        border-style: solid;
-        border-radius:24px;
-        font-weight: bold;
-        cursor:pointer;
-        margin-right: 4px;
-    }
+  .apply-button {
+    background-color: rgb(10, 102, 194);
+    color: white;
+    border: none;
+    height: 40px;
+    width: 240px;
+    font-weight: bold;
+    font-size: 15px;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-right: 8px;
+    transition: background-color 0.15s;
+  }
+
+  .apply-button:hover {
+    background-color: rgb(2, 70, 138);
+  }
+
+  .save-button {
+    background-color: white;
+    color: rgb(10, 102, 194);
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(10, 102, 194);
+    height: 40px;
+    width: 80px;
+    font-weight: bold;
+    font-size: 15px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: background-color 0.15s,
+      border-width 0.15s;
+  }
+
+  .save-button:hover {
+    background-color: rgb(226, 240, 254);
+    border-width: 2px;
+  }
 </style>
 
-<button class="linkedln-button">
-    Apply on company website
+<button class="apply-button">
+  Apply on company website
 </button>
 
-<style>
-    .Save-button{
-        background-color:white;
-        color:rgb(10,102,194);
-        padding-left:24px ;
-        padding-right:24px;
-        padding-top:12px ;
-        padding-bottom:12px;
-        border-radius:18px;
-        font-weight:bold;
-        cursor:pointer;
-        border-style:solid;
-        border-color:rgb(10,102,194);
-        font-size:16px ;
-        border-width: 1px;
-    }
-</style>
-
-<button class="Save-button">
-    Save
+<button class="save-button">
+  Save
 </button>
