added hover and active to link and background color

--- a/amazon_sale.html
+++ b/amazon_sale.html
@@ -2,6 +2,9 @@
     .amazon-link{
         color:rgb(0,113,133);
     }
+    .amazon-link:hover{
+        color: rgb(199, 81, 31);
+    }
 
     .title{
         font-size: 20px;
@@ -23,6 +26,14 @@
         font-weight: 2px;
         cursor:pointer;
     }
+   
+    .cart-button:hover {
+         background-color: rgb(247, 202, 0);
+  }
+
+    .cart-button:active {
+         opacity: 0.5;
+  }
 
     .buy-button{
         background-color:rgb(255,164,24);
@@ -36,6 +47,13 @@
         margin-right: 8px;
 
     }
+    .buy-button:hover {
+        background-color: rgb(250, 137, 0);
+  }
+
+  .buy-button:active {
+        opacity: 0.5;
+  }
 </style>
 
 <a class="amazon-link" href="https://www.amazon.com" target="_blank">
