--- a/stretch_button.html
+++ b/stretch_button.html
@@ -1,27 +1,18 @@
 <style>
   .stretch{
-    background-color:green;
-    color:white;
-    border:none;
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-top:8px;
-    padding-bottom:8px;
-    font-size:18px;
-    cursor:pointer;
-    transition:padding-left 1s,
-    padding-right 1s,
-    padding-top 1s,
-    padding-bottom 1s;
+    background-color: green;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: padding 1s;
   }
+
   .stretch:hover{
-    padding-left:40px ;
-    padding-right: 40px;
-    padding-top: 20px;
-    padding-bottom:20px;
+    padding: 20px 40px;
   }
 </style>
-
 
 <button class="stretch">
   Stretch
