--- a/shadow_button.html
+++ b/shadow_button.html
@@ -3,10 +3,10 @@
   background-color:green;
   color:white;
   border:none;
-  padding-left: 16;
-  padding-right:16 ;
-  padding-top: 8;
-  padding-bottom:8;
+  padding-left:16px;
+  padding-right:16px;
+  padding-top:8px;
+  padding-bottom:8px;
   font-size:18px;
   cursor:pointer;
   box-shadow:3px 3px 5px rgba(0,0,0,0.3);
